[workspace]
resolver = "2"
members = [
    "media-core",
    "media-codec",
    "media-device",
    "media-filter",
    "media",
]

[workspace.package]
homepage = "https://github.com/rust-media"
repository = "https://github.com/rust-media/media-rs"
version = "0.6.1"
authors = ["Zhou Wei <zhouwei@ehom.net>"]
license = "MIT OR Apache-2.0"
categories = ["multimedia", "multimedia::audio", "multimedia::video"]
keywords = ["audio", "media", "video"]
edition = "2021"
rust-version = "1.83.0"

[workspace.dependencies]
media = { version = "0.6.1", path = "./media" }
media-core = { version = "0.6.1", default-features = false, path = "./media-core" }
media-codec = { version = "0.6.1", default-features = false, path = "./media-codec" }
media-device = { version = "0.6.1", default-features = false, path = "./media-device" }
