[workspace]
resolver = "2"
members = [
    "media-core",
    "media-codec",
    "media-device",
    "media-filter",
    "media",
]

[workspace.package]
homepage = "https://github.com/rust-media"
repository = "https://github.com/rust-media/media-rs"
version = "0.8.1"
authors = ["Zhou Wei <zhouwei@ehom.net>"]
license = "MIT OR Apache-2.0"
categories = ["multimedia", "multimedia::audio", "multimedia::video"]
keywords = ["audio", "media", "video"]
edition = "2021"
rust-version = "1.83.0"

[workspace.dependencies]
media = { version = "0.8.1", path = "./media" }
media-core = { version = "0.8.1", default-features = false, path = "./media-core" }
media-codec = { version = "0.8.1", default-features = false, path = "./media-codec" }
media-device = { version = "0.8.1", default-features = false, path = "./media-device" }
aligned-vec = "0.6"
bitflags = "2.10"
bytemuck = "1.24"
cfg-if = "1.0"
core-audio-types = "0.2.0"
core-foundation = "0.10"
core-media = "0.6.2"
core-video = { version = "0.5.2", default-features = false, features = ["link"] }
num_enum = "0.7"
num-rational = "0.4"
num-traits = "0.2"
os-ver = "0.2"
smallvec = "1.15"
thiserror = "1.0"
x-variant = "0.1"
