[package]
name = "media-base"
description = "Defines media types, such as Media Frame"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/media-base"
version = "0.1.0"
authors.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true

[dependencies]
bitflags = "2.6"
cfg-if = "1.0"
num_enum = "0.7"
os-ver = "0.2"
smallvec = "1.13"
thiserror = "1.0"
x-variant = "0.1"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
core-audio-types = "0.1"
core-foundation = "0.10"
core-media = "0.5"
core-video = { version = "0.4", default-features = false, features = ["link"] }
