[package]
name = "media-base"
description = "Defines media types, such as Media Frame"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/media-base"
version = "0.2.0"
authors.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bitflags = "2.6"
bytemuck = "1.23"
cfg-if = "1.0"
num_enum = "0.7"
num-rational = "0.4"
os-ver = "0.2"
smallvec = "1.15"
thiserror = "1.0"
x-variant = "0.1"
yuv = { version = "0.8", features = ["fast_mode"] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
core-audio-types = "0.1"
core-foundation = "0.10"
core-media = "0.5"
core-video = { version = "0.4", default-features = false, features = ["link"] }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
    "x86_64-pc-windows-msvc",
    "x86_64-apple-darwin",
    "x86_64-apple-ios",
    "aarch64-apple-darwin",
    "aarch64-apple-ios",
]
