[package]
name = "media-codec"
description = "A generic encoding/decoding framework"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/media-codec"
version.workspace = true
authors.workspace = true
license.workspace = true
categories = ["multimedia", "multimedia::audio", "multimedia::video", "multimedia::encoding"]
keywords = ["codec", "encoder", "decoder"]
edition.workspace = true

[dependencies.media-core]
workspace = true

[dependencies]
bitflags = "2.6"
num-rational = "0.4"

[features]
default = ["full"]
opus-enc = []
opus-dec = []
h264-enc = []
h264-dec = []
vpx-enc = []
vpx-dec = []
av1-enc = []
av1-dec = []
audio-enc = ["opus-enc"]
audio-dec = ["opus-dec"]
video-enc = ["h264-enc", "vpx-enc", "av1-enc"]
video-dec = ["h264-dec", "vpx-dec", "av1-dec"]
full = ["audio-enc", "audio-dec", "video-enc", "video-dec"]
