[package]
name = "media-codec"
description = "A generic encoding/decoding framework"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/media-codec"
version.workspace = true
authors.workspace = true
license.workspace = true
categories = ["multimedia", "multimedia::audio", "multimedia::video", "multimedia::encoding"]
keywords = ["codec", "encoder", "decoder"]
edition.workspace = true

[dependencies.media-core]
workspace = true

[dependencies]
bitflags.workspace = true
num-rational.workspace = true

[features]
default = ["audio", "audio-enc", "audio-dec", "video", "video-enc", "video-dec"]
audio = ["media-core/audio"]
video = ["media-core/video"]
opus-enc = []
opus-dec = []
h264-enc = []
h264-dec = []
vpx-enc = []
vpx-dec = []
av1-enc = []
av1-dec = []
audio-enc = ["audio", "opus-enc"]
audio-dec = ["audio", "opus-dec"]
video-enc = ["video", "h264-enc", "vpx-enc", "av1-enc"]
video-dec = ["video", "h264-dec", "vpx-dec", "av1-dec"]
