[package]
name = "media-codec"
description = "A generic encoding/decoding framework"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/media-codec"
version.workspace = true
authors.workspace = true
license.workspace = true
categories = ["multimedia", "multimedia::audio", "multimedia::video", "multimedia::encoding"]
keywords = ["codec", "encoder", "decoder"]
edition.workspace = true

[dependencies]
media-codec-types.workspace = true
media-core.workspace = true

[features]
default = ["audio-decoder", "audio-encoder", "video-decoder", "video-encoder"]
audio-decoder = [
    "audio",
    "decoder",
]
audio-encoder = [
    "audio",
    "encoder",
]
video-decoder = [
    "video",
    "decoder",
]
video-encoder = [
    "video",
    "encoder",
]
audio = [
    "media-core/audio",
    "media-codec-types/audio",
]
video = [
    "media-core/video",
    "media-codec-types/video",
]
decoder = [
    "media-codec-types/decoder",
]
encoder = [
    "media-codec-types/encoder",
]
