[package]
name = "media-core"
description = "Defines media types and provides basic media utilities"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/media-core"
version.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bitflags = "2.6"
bytemuck = "1.23"
cfg-if = "1.0"
crossbeam-queue = "0.3"
num_enum = "0.7"
num-rational = "0.4"
num-traits = "0.2"
os-ver = "0.2"
pic-scale = { version = "0.6", optional = true}
smallvec = "1.15"
strum = { version = "0.27", features = ["derive"] }
thiserror = "1.0"
x-variant = "0.1"
yuv = { version = "0.8", features = ["fast_mode"], optional = true}

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
core-audio-types = "0.1"
core-foundation = "0.10"
core-media = "0.5"
core-video = { version = "0.4", default-features = false, features = ["link"] }

[features]
default = ["audio", "video"]
audio = []
video = ["dep:pic-scale", "dep:yuv"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
    "x86_64-pc-windows-msvc",
    "x86_64-apple-darwin",
    "x86_64-apple-ios",
    "aarch64-apple-darwin",
    "aarch64-apple-ios",
]
