[package]
name = "media-core"
description = "Define media types and provide basic media utilities"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/media-core"
version.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
aligned-vec.workspace = true
bitflags.workspace = true
bytemuck.workspace = true
cfg-if.workspace = true
crossbeam-queue = "0.3"
num_enum.workspace = true
num-rational.workspace = true
num-traits.workspace = true
os-ver.workspace = true
pic-scale = { version = "0.6", optional = true}
smallvec.workspace = true
strum = { version = "0.27", features = ["derive"] }
thiserror.workspace = true
x-variant.workspace = true
yuv = { version = "0.8", features = ["fast_mode"], optional = true}

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
core-audio-types = "0.1"
core-foundation = "0.10"
core-media = "0.5"
core-video = { version = "0.4", default-features = false, features = ["link"] }

[features]
default = ["audio", "video"]
audio = []
video = ["dep:pic-scale", "dep:yuv"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
    "x86_64-pc-windows-msvc",
    "x86_64-apple-darwin",
    "x86_64-apple-ios",
    "aarch64-apple-darwin",
    "aarch64-apple-ios",
]
