[package]
name = "media-device"
description = "A cross-platform wrapper for capture and playback devices"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/media-device"
version.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
keywords = ["audio", "video", "camera", "capture", "playback"]
edition.workspace = true

[dependencies.media-core]
workspace = true

[dependencies]
log.workspace = true
cfg-if.workspace = true
os-ver.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
# libcamera (rust) 0.4.0 doesn't contain all the APIs required, we need to use a newer version from git.
# additionally support for libcamera 0.6.0 (c version) is required, introduced in (their) rev 419e4b142920c23f64d6acb11f88d5dad0a9fc23.
#libcamera = { version = "0.4.0" }
libcamera = { git = "https://github.com/lit-robotics/libcamera-rs.git", rev = "419e4b142920c23f64d6acb11f88d5dad0a9fc23"}

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
av-foundation = "0.5"
dispatch2 = "0.1"
core-audio-types = "0.1"
core-foundation = "0.10"
core-media = "0.5"
core-video = { version = "0.4", default-features = false, features = ["link"] }
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSArray", "NSDictionary", "NSObject"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-core = "0.61"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.61"
features = [
    "Win32",
    "Win32_Foundation",
    "Win32_Media",
    "Win32_Media_DirectShow",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com"
]

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"
web-time = "1.1"
js-sys = "0.3"

[target.'cfg(target_family = "wasm")'.dependencies.web-sys]
version = "0.3"
features = [
    "ImageData",
    "MediaDeviceInfo",
    "MediaDeviceKind",
    "MediaDevices",
    "MediaStream",
    "MediaStreamConstraints",
    "MediaStreamTrack",
    "MediaStreamTrackState",
    "MediaTrackConstraints",
    "MediaTrackSettings",
    "MediaTrackSupportedConstraints",
    "Navigator",
]

[target.'cfg(target_family = "wasm")'.dev-dependencies]
console_error_panic_hook = "0.1"

[dev-dependencies]
env_logger = {  workspace = true }

[features]
default = ["audio", "video"]
audio = ["media-core/audio"]
video = ["media-core/video"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
    "x86_64-pc-windows-msvc",
    "x86_64-apple-darwin",
    "x86_64-apple-ios",
    "aarch64-apple-darwin",
    "aarch64-apple-ios",
]
