[package]
name = "media-filter"
description = "Media filter"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/media-filter"
version.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
