[package]
name = "media"
description = "A pure Rust media framework"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/media"
version = "0.2.1"
authors.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
rust-version.workspace = true
readme = "../README.md"

[dependencies.media-core]
workspace = true

[dependencies.media-codec]
workspace = true
optional = true

[dependencies.media-device]
workspace = true
optional = true

[features]
default = ["media-codec", "media-device"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
    "x86_64-pc-windows-msvc",
    "x86_64-apple-darwin",
    "x86_64-apple-ios",
    "aarch64-apple-darwin",
    "aarch64-apple-ios",
]
