[package]
name = "media"
description = "A pure Rust media framework"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/media"
version.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
rust-version.workspace = true
readme = "../README.md"

[dependencies]
media-core = { workspace = true, default-features = false }
media-codec = { workspace = true, default-features = false, optional = true }
media-device = { workspace = true, default-features = false, optional = true}
media-format = { workspace = true, default-features = false, optional = true}

[features]
default = [
    "audio",
    "video",
    "decoder",
    "encoder",
    "demuxer",
    "muxer",
    "codec",
    "device",
    "format",
]
audio = [
    "media-core/audio",
    "media-codec?/audio",
    "media-device?/audio",
    "media-format?/audio",
]
video = [
    "media-core/video",
    "media-codec?/video",
    "media-device?/video",
    "media-format?/video",
]
decoder = ["media-codec?/decoder"]
encoder = ["media-codec?/encoder"]
demuxer = ["media-format?/demuxer"]
muxer = ["media-format?/muxer"]
codec = ["dep:media-codec"]
device = ["dep:media-device"]
format = ["dep:media-format"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
    "x86_64-pc-windows-msvc",
    "x86_64-apple-darwin",
    "x86_64-apple-ios",
    "aarch64-apple-darwin",
    "aarch64-apple-ios",
]
