[package]
name = "media-filter-types"
description = "Defines types for filter implementations"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/media-filter-types"
version.workspace = true
authors.workspace = true
license.workspace = true
categories = ["multimedia", "multimedia::audio", "multimedia::video"]
keywords = ["filter"]
edition.workspace = true

[dependencies.media-core]
workspace = true

[features]
default = ["audio", "video"]
audio = [
    "media-core/audio",
]
video = [
    "media-core/video",
]
